added get user filter, remove token and default true to active
